fixed pagination buttons on small screens and added overlay blend mode to green hover on blog items

--- a/assets/css/pages/_blog.sass
+++ b/assets/css/pages/_blog.sass
@@ -46,6 +46,7 @@ ul
       content: ""
       background-color: $accent-color
       opacity: 0.35
+      mix-blend-mode: overlay
 
   .row
     line-height: 1
@@ -78,6 +79,12 @@ ul
   text-transform: uppercase
   letter-spacing: 2px
   font-size: 20px
+
+  @media only screen and (max-width: 468px)
+    padding: 10px 35px
+
+  @media only screen and (max-width: 408px)
+    padding: 10px 20px
 
   &:hover
     cursor: pointer
@@ -137,6 +144,9 @@ ul
   text-transform: uppercase
   letter-spacing: 2px
   color: #3d3d3d
+
+  .page-number
+    text-align: center
 
 @media only screen and (max-width: 1000px)
   .blog-item
